--- a/src/Siedbar.css
+++ b/src/Siedbar.css
@@ -31,3 +31,66 @@
     object-fit: cover;
 
 }
+.siedbar_top>h4{
+    color: gray;
+    font-size: 12px;
+}
+.siedbar_top > h2 {
+    font-size: 18px;
+}
+
+.siedbar_stat{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+
+}
+.siedbar_stat > p {
+    color: gray;
+    font-size: 13px;
+    font-weight: 600;
+}
+.siedbar_statNumber{
+    font-weight: bold;
+    color: #0a66c2;
+}
+.siedbar_stats{
+    padding: 10px;
+    margin-bottom: 10px;
+}
+.siedbar_bottom{
+    text-align: left;
+    padding: 10px;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+
+}
+.siedbar_bottom >p{
+    font-size: 13px;
+    padding-bottom: 10px;
+}
+.siedbar_recentItem
+{
+    display: flex;
+    font-size: 13px;
+    color: gray;
+    cursor: pointer;
+    font-weight: bolder;
+    margin-bottom: 5px;
+    padding: 5px;
+
+}
+.siedbar_recentItem:hover{
+    background-color: whitesmoke;
+    border-radius: 10px;
+    cursor: pointer;
+    color: black;
+
+}
+.siedbar_hash{
+    margin-right: 10px;
+    margin-left: 5px;
+
+}
